estilzando menu de navegação

--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
             </div>
             <div class="menu">
                 <nav>
-                    <il>
-                        <li><a href="#">Home</a></li>
+                    <ul>
+                        <li class="active"><a href="#">Home</a></li>
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Our Projects</a></li>
@@ -30,7 +30,7 @@
                         <li><a href="#">Price</a></li>
                         <li><a href="#">Some Facts</a></li>
                         <li><a href="#">Contact Us</a></li>
-                    </il>
+                    </ul>
                 </nav>
             </div>
         </div>
