construção e estilização do banner

--- a/home.html
+++ b/home.html
@@ -36,7 +36,48 @@
         </div>
     </header>
     <main>
-
+        <section class="banner">
+            <div class="sliders" style="margin-left: 0;">
+                <div class="slide">
+                    <div class="slideArea">
+                        <h1>
+                            design is about <br><span>communication</span>
+                        </h1>
+                        <h2>
+                            Call Us: +00 0 1234 5678
+                        </h2>
+                        <a href="#">Get in touch!</a>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slideArea">
+                        <h1>
+                            design is about <br><span>teste</span>
+                        </h1>
+                        <h2>
+                            Call Us: +00 0 1234 5678
+                        </h2>
+                        <a href="#">Get in touch!</a>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slideArea">
+                        <h1>
+                            design is about <br><span>teste2</span>
+                        </h1>
+                        <h2>
+                            Call Us: +00 0 1234 5678
+                        </h2>
+                        <a href="#">Get in touch!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="slidersPointers">
+                <div class="pointer active"></div>
+                <div class="pointer"></div>
+                <div class="pointer"></div>
+            </div>
+        </section>
     </main>
     <footer>
 
