contrução dos default caracteristicos da sections

--- a/home.html
+++ b/home.html
@@ -78,6 +78,20 @@
                 <div class="pointer"></div>
             </div>
         </section>
+        <section class="default light">
+            <div class="sectionTitle">About Us</div>
+            <div class="sectionDesc">Who we are?</div>
+            <div class="sectionBody">
+                ...
+            </div>
+        </section>
+        <section class="default dark">
+            <div class="sectionTitle">titulo</div>
+            <div class="sectionDesc">descricao</div>
+            <div class="sectionBody">
+                ...
+            </div>
+        </section>
     </main>
     <footer>
 
